tests/integration/errors/match_missing_variants.rsg
// TEST: compile_error
// EXPECT-ERROR: non-exhaustive

enum Msg {
    Quit,
    Move { x: i32, y: i32 },
    Write(str),
}

fn main() {
    m := Msg::Quit
    match m {
        Quit => "quit",
    }
}
